# react_django_app

./: README.md  data_json.txt  main.py  pyproject.toml
